Updates from Overleaf

--- a/draft_ABP.tex
+++ b/draft_ABP.tex
@@ -467,7 +467,7 @@ where we introduce a new set of variables $u_\alpha = \prod_J p_J^{V_J^\alpha}$ 
 $\alpha=1,\dots, v$. Note that there's no unique way to write $S_J=F_\alpha V_J^\alpha$ if the big polyhedron is not a simplex, \textit{i.e.} $v>d+m$, and in this case,
 $u$ variables $\{u_\alpha \}$ are not multiplicatively independent. Therefore, it is an important special case when the big polyhedron is a simplex, \textit{i.e.} $N=v=d+m$, where $N$ is 
 the number of facets of the big polyhedron or the original polytope $\mathcal P$,
-and inequalities $F_\alpha=S_J(V^{-1})^J_\alpha \geq 0$ are exactly the inequalities $W_a^J S_J\geq 0$ up to resales $F_\alpha \mapsto t F_\alpha$ for positive factors $t$, because
+and inequalities $F_\alpha=S_J(V^{-1})^J_\alpha \geq 0$ are exactly the inequalities $W_a^J S_J\geq 0$ up to rescaling $F_\alpha \mapsto t F_\alpha$ for positive factors $t$, because
 there's no nontrivial linear isometry from the simplex to itself besides permutations of vertices. Therefore, we identity the label of facets $\alpha$ with the label of 
 vertices $J$ and get $V=W^{-1}$. Furthermore, every facet of the original polytope $\mathcal P$ can be associated with a single $u_\alpha$ going to zero. 
 %Generally, the big polyhedron of a stringy integral is not necessary to be a simplex. 
@@ -479,7 +479,7 @@ These nice properties become manifest in the configuration space: not only the b
 	1-u_\alpha=\prod_{\beta} u_\beta^{\beta||\alpha},
 \end{equation}
 where the product is over all $N$ variables ($N$ facets), and the integer $\beta || \alpha\geq 0$ is the so-called compatibility degree defined in the corresponding cluster algebra~\cite{Zelevinskysys}. Varieties defined by $u$ equations associated with finite type clusters  are called cluster configuration spaces.
-We see that when $u_\alpha$ (for a facet $\alpha$) goes to $0$, it forces all the $u_\beta$ with $\beta || \alpha>0$ goes to $1$ (for facets $\beta$ are exactly those {\it incompatible} with $\alpha$); the remaining $u$'s that are compatible with $u_\alpha$ satisfy $u$ equations for the facet, which factorizes as removing a node of the Dynkin diagram. Therefore, we say that the configuration space is a {\it binary geometry}. Note that this is true also for the complex case, and if we further require all $u$ variables to be positive, we have $0<u<1$ which gives the positive configuration space~\cite{Arkani-Hamed:2020cig}. The binary property is what guarantees the stringy integral to factorize even at finite $\alpha'$: on the pole $X_\alpha \to 0$, $u_\alpha\to 0$ forces all incompatible $u_\beta\to 1$ which decoupled from $\prod u^{\alpha' X}$, and the integral becomes the factorized one for the facet $\alpha$. 
+We see that when $u_\alpha$ (for a facet $\alpha$) goes to $0$, it forces all the $u_\beta$ with $\beta || \alpha>0$ to go to $1$ (for facets $\beta$ are exactly those {\it incompatible} with $\alpha$); the remaining $u$'s that are compatible with $u_\alpha$ satisfy $u$ equations for the facet, which factorizes as removing a node of the Dynkin diagram. Therefore, we say that the configuration space is a {\it binary geometry}. Note that this is true also for the complex case, and if we further require all $u$ variables to be positive, we have $0<u<1$ which gives the positive configuration space~\cite{Arkani-Hamed:2020cig}. The binary property is what guarantees the stringy integral to factorize even at finite $\alpha'$: on the pole $X_\alpha \to 0$, $u_\alpha\to 0$ forces all incompatible $u_\beta\to 1$ which decoupled from $\prod u^{\alpha' X}$, and the integral becomes the factorized one for the facet $\alpha$. 
 
 For example, the string integral \eqref{stringint} corresponds to type $A_{n{-}3}$, %and we can use a positive parametrization $z_i=1+x_2+\cdots+x_{i{-}1}$ for $i=2,3,\cdots, n{-}1$ (with gauge fixing $z_1=0, z_2=1$ and $z_n=\infty$). The integral is rewritten as
 %\[
@@ -1938,7 +1938,7 @@ We leave the study of compatible degrees and $u$ equations for general permutohe
 
 \section{Discussions}
 
-In this paper we introduce a large class of integrals,  ${\cal I}_{\bf B}$, which can be regarded as a family of rigid stringy canonical forms%~\cite{Arkani-Hamed:2019mrd} 
+In this paper we introduce a large class of integrals,  ${\cal I}_{\bf B}$, which can be regarded as a family of rigid stringy canonical forms %~\cite{Arkani-Hamed:2019mrd} 
 for generalized permutohedra ${\mathscr P}(\bf B)$, and we show that corresponding configuration spaces are always binary geometries. These rigid integrals satisfy the remarkable property that, at any ``massless'' pole, {\it i.e.} poles of the leading order $\Omega({\mathscr P}(\bf B) )$, the residue is given by a product of two such integrals, ${\cal I}_{{\bf B}_L} \times {\cal I}_{{\bf B}_R}$. Our results greatly extend the scope of binary geometries and associated integrals with such ``perfect'' factorization properties, which were originally thought to tie to the more special class of generalized associahedra for finite-type cluster algebras. For infinite families of cases as degenerations of associahedra and cyclohedra (which belong to both generalized permutohedra and generalized associahedra), we find additionally that the $u$ equations are ``perfect'' just like the case for cluster configuration spaces. Our preliminary investigations have opened up various new avenues to be explored, and we end with listing some open questions.
 
 \paragraph{Generalized permutohedra vs. generalized associahedra} Our results provide an infinite number of examples generalizing ordinary string integrals (and cluster string integrals of type $B_n$), where the configuration space is determined by {\it linear} factors, or equivalently hyperplane arrangement. In this sense, it is fair to say that we have only explored a very special corner in the world of binary configuration spaces and associated stringy integrals. Even for cluster cases, it is unknown if the cluster configuration space of type $C_n$ can be realized by hyperplane arrangement (see also \cite{Li:2018mnq}), and for type $ D_n$ and exceptional cases, the conjecture is that the spaces cannot be obtained this way~\cite{Arkani-Hamed:2019plo}; we expect that these cases do not belong to integrals with ``linear'' factors. It would be highly desirable to look for a wider class of binary geometries which naturally incorporate both generalized permutohedra and generalized associahedra. 
